# seven_days_world

./: .gitignore  README.md  SevenDayScript.spec  build.spec  pyproject.toml  阿星的小助手.spec
src/: config.py  main.py  settings.json
src/tasks/: badge_task.py  fish_task.py  wqzz_task.py
src/ui/: badge.py  fish.py  layout.py  log_box.py  wqzz.py
src/utils/: consts.py  error_log.py  fun.py  mouse_operate.py  rapid_ocr.py  screenshot.py  setting.py  store.py  template_match.py  window_control.py
