[project]
name = "seven-days-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.85.3",
    "mss>=10.2.0",
    "opencv-contrib-python>=5.0.0.93",
    "pydirectinput>=1.0.4",
    "pygetwindow>=0.0.9",
    "rapidocr>=3.9.1",
    "pywin32>=312",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "torchaudio>=2.11.0",
    "onnxruntime>=1.27.0",
    "pyinstaller>=6.21.0",
    "flet-desktop>=0.85.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"

[project.scripts]
app = "src.main:main"
